# Tilavet

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  tilavet.md
1_data_prep/: download_dataset.py  download_quran_text.py  download_translations.py  normalize_text.py  prepare_dataset.py  utils.py
2_training/: eval.py  requirements.txt  train_whisper_lora.py
2_training/config/: lora_config.json
3_models/: README.md
4_inference/: api.py  transcribe.py
4_inference/utils/: audio_processor.py  text_normalizer.py
5_features/: surah_detector.py  translation_engine.py  verse_matcher.py
data/: README.md
docs/: architecture.md  whisper-finetuning-guide.md
notebooks/: baseline_wer_test.ipynb  train_quran_stt_colab.ipynb
scripts/: RUNPOD_GUIDE.md  build_quran_db.py  convert_to_coreml.py  runpod_setup.sh
tests/: conftest.py  test_api.py  test_normalize_text.py  test_translation_engine.py  test_verse_matcher.py
